fixed shifting logout button

--- a/client/src/css/logout.css
+++ b/client/src/css/logout.css
@@ -1,5 +1,6 @@
 #logoutBtn {
   display: block;
+  
   font-size: 1em;
   color: #ffffff;
   text-decoration: none;
@@ -19,3 +20,17 @@
   background-color: #007bff;
   border-color: #007bff;
 }
+
+@media (max-width:  1200px) {
+    #logoutBtn {
+        position: absolute;
+    }
+  }
+
+
+@media (max-width:  900px) {
+    #logoutBtn {
+        position: relative;
+        top: -1px;
+    }
+  }
